--- a/porsche.html
+++ b/porsche.html
@@ -63,16 +63,16 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="porsche.html">Porsche</a>
+                        <a class="nav-link" href="./porsche.html">Porsche</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#audi">Audi</a>
+                        <a class="nav-link" href="./audi.html">Audi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#vw">VW</a>
+                        <a class="nav-link" href="./Volkswagen.html">VW</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#bmw.html">BMW</a>
+                        <a class="nav-link" href="./bmw.html">BMW</a>
                     </li>
                 </ul>
             </div>
