--- a/audi.html
+++ b/audi.html
@@ -113,16 +113,16 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#porsche">Porsche</a>
+                        <a class="nav-link" href="./porsche.html">Porsche</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#audi">Audi</a>
+                        <a class="nav-link" href="./audi.html">Audi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#vw">VW</a>
+                        <a class="nav-link" href="./Volkswagen.html">VW</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="bmw.html">BMW</a>
+                        <a class="nav-link" href="./bmw.html">BMW</a>
                     </li>
                 </ul>
             </div>
